<resources>
    <string name="app_name">PostpartumTracking</string>
    <string name="stop">Stop</string>
    <string name="title"><![CDATA[<h3></h3>]]></string>
    <string name="hours"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>
    <string name="extra_event">EXTRA_EVENT</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
</resources>
